--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -17,27 +17,32 @@ jobs:
           fetch-depth: 0
 
       - name: AI Code Review with Gemini
-        uses: google-github-actions/run-gemini-cli@v1
-        with:
-          input: |
-            Aja como um Engenheiro de Segurança Sênior (DevSecOps). Analise este Pull Request buscando vulnerabilidades (OWASP Top 10), Code Smells, e aderência a melhores práticas de Java 25 e Spring Boot 3.4. 
-            
-            Diferenças do PR:
-            ${{ github.event.pull_request.diff_url }}
-          model: gemini-2.0-flash
-          google_api_key: ${{ secrets.AI_API_KEY }}
-          output: review_output.txt
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GEMINI_API_KEY: ${{ secrets.AI_API_KEY }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+          REPO: ${{ github.repository }}
+        run: |
+          # Get PR diff
+          curl -s -H "Authorization: token $GITHUB_TOKEN" \
+            "https://api.github.com/repos/$REPO/pulls/$PR_NUMBER/files" \
+            | jq -r '.[].patch' > pr_diff.txt
 
-      - name: Post Review Comment
-        if: always()
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const fs = require('fs');
-            const output = fs.readFileSync('review_output.txt', 'utf8');
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: `## 🤖 AI Code Review (Gemini 2.0 Flash)\n\n${output}`
-            });
+          # Call Gemini API via REST
+          PROMPT="Aja como um Engenheiro de Segurança Sênior (DevSecOps). Analise o DIFF deste Pull Request buscando: 1. Vulnerabilidades OWASP Top 10 (SQL Injection, Insecure Deserialization). 2. Code Smells e complexidade ciclomática. 3. Aderência a melhores práticas de Java 25 e Spring Boot 3.4. Responda com comentários técnicos e construtivos.\n\nDIFF:\n$(cat pr_diff.txt)"
+
+          RESPONSE=$(curl -s "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=$GEMINI_API_KEY" \
+            -H "Content-Type: application/json" \
+            -d "{\"contents\": [{\"parts\": [{\"text\": \"$PROMPT\"}]}]}")
+
+          # Extract review text
+          REVIEW=$(echo "$RESPONSE" | jq -r '.candidates[0].content.parts[0].text' 2>/dev/null || echo "Erro ao processar resposta do Gemini")
+
+          # Post comment
+          curl -s -X POST \
+            -H "Authorization: token $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            "https://api.github.com/repos/$REPO/issues/$PR_NUMBER/comments" \
+            -d "{\"body\": \"## 🤖 AI Code Review (Gemini 2.0 Flash)\n\n$REVIEW\"}"
+
+          echo "✅ Review posted successfully"
