--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -9,24 +9,36 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      pull-requests: write # Necessário para comentar no PR
+      pull-requests: write
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0 # Necessário para comparar branches
+
+      - name: Get PR Diff
+        id: diff
+        run: |
+          # Captura as mudanças entre a branch atual e a base do PR
+          git diff origin/${{ github.base_ref }}...HEAD > pr_diff.txt
 
       - name: Run Gemini CLI
         id: gemini
         uses: google-github-actions/run-gemini-cli@main
         with:
           gemini_api_key: ${{ secrets.AI_API_KEY }}
+          # O segredo aqui é passar o arquivo pr_diff.txt no prompt
           prompt: |
-            Aja como um Engenheiro de Segurança Sênior (DevSecOps). Analise este Pull Request buscando:
-            1. Vulnerabilidades OWASP Top 10 (especialmente SQL Injection e Insecure Deserialization)
-            2. Code Smells e complexidade ciclomática desnecessária
-            3. Aderência às melhores práticas de Java 25 e Spring Boot 3.4
-            4. Responda com comentários técnicos e construtivos para cada vulnerability encontrada
+            Aja como um Engenheiro de Segurança Sênior (DevSecOps). 
+            Analise as mudanças abaixo buscando:
+            1. Vulnerabilidades OWASP Top 10 (SQL Injection, etc)
+            2. Code Smells e complexidade ciclomática
+            3. Java 25 e Spring Boot 3.4 best practices
+            
+            Diferencial: Responda em Português e seja direto.
+            
+            --- MUDANÇAS NO CÓDIGO ---
+            $(cat pr_diff.txt)
           gemini_model: gemini-2.0-flash
 
       - name: Post Review on PR
@@ -34,10 +46,17 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const response = `${{ steps.gemini.outputs.response }}`;
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: `## 🤖 AI Code Review (Gemini 2.0 Flash)\n\n${response}`
-            });
+            // A saída da action anterior fica disponível no step. outputs.text ou similar
+            // dependendo da versão, mas a forma mais segura é capturar o log ou via output definido
+            const response = process.env.GEMINI_OUTPUT; 
+            
+            if (response) {
+              github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: `## 🤖 AI Code Review (Gemini 2.0 Flash)\n\n${response}`
+              });
+            }
+        env:
+          GEMINI_OUTPUT: ${{ steps.gemini.outputs.text }}
