--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      pull-requests: write # Necessário para comentar no PR
+      pull-requests: write
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
@@ -17,7 +17,8 @@ jobs:
           fetch-depth: 0
 
       - name: CodeRabbit AI Review
-        uses: coderabbitai/ai-review-agent@latest
+        # Usando a versão estável e o repositório correto
+        uses: coderabbitai/ai-pr-reviewer@latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CODERABBIT_TOKEN: ${{ secrets.CODERABBIT_TOKEN }}
+          CODERABBIT_API_KEY: ${{ secrets.CODERABBIT_API_KEY }} # Verifique se o nome no Secrets é este
