--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -1,21 +1,15 @@
-name: AI Code Review with Gemini 2.0
-
-on:
-  pull_request:
-    types: [opened, synchronize]
-
-jobs:
-  review:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Gemini Code Review
-        uses: jfiala/gemini-pr-reviewer@main
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          gemini_api_key: ${{ secrets.GEMINI_API_KEY }}
-          language: Portuguese
+- name: AI Reviewer
+  uses: anc95/ChatGPT-CodeReview@main
+  env:
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    OPENAI_API_KEY: ${{ secrets.AI_API_KEY }} # Key do OpenRouter
+    OPENAI_API_BASE: https://openrouter.ai/api/v1
+    MODEL: google/gemini-2.0-flash
+    LANGUAGE: Portuguese
+    PROMPT: |
+      Aja como um Engenheiro de Segurança Sênior (DevSecOps). 
+      Analise o DIFF deste Pull Request buscando:
+      1. Vulnerabilidades OWASP Top 10 (especialmente SQL Injection e Insecure Deserialization).
+      2. Code Smells e complexidade ciclomática desnecessária.
+      3. Aderência às melhores práticas de Java 25 e Spring Boot 3.4.
+      4. Responda com comentários técnicos e construtivos diretamente nas linhas do código afetado.
