--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      pull-requests: write # necessário para comentar no PR
+      pull-requests: write
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
@@ -20,7 +20,7 @@ jobs:
         uses: anc95/ChatGPT-CodeReview@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OPENAI_API_KEY: ${{ secrets.AI_API_KEY }} # Key do OpenRouter
+          OPENAI_API_KEY: ${{ secrets.AI_API_KEY }}
           OPENAI_API_BASE: https://openrouter.ai/api/v1
           MODEL: google/gemini-2.0-flash
           LANGUAGE: Portuguese
