--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -21,7 +21,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.AI_API_KEY }}
-          OPENAI_API_BASE: https://openrouter.ai/api/v1
+          OPENAI_API_BASE: https://generativelanguage.googleapis.com/v1beta/openai
           MODEL: google/gemini-2.0-flash
           LANGUAGE: Portuguese
           PROMPT: |
