--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -22,8 +22,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.AI_API_KEY }}
           # Configuração para compatibilidade Gemini
-          OPENAI_API_BASE: https://generativelanguage.googleapis.com/v1beta/openai/
-          MODEL: gemini-2.0-flash
+          OPENAI_API_BASE: https://generativelanguage.googleapis.com/v1beta
+          MODEL: gemini-1.5-flash
           LANGUAGE: Portuguese
           PROMPT: |
             Aja como um Engenheiro de Segurança Sênior (DevSecOps). 
