--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -21,7 +21,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.AI_API_KEY }}
-          OPENAI_API_BASE: https://generativelanguage.googleapis.com/v1beta/openai/
+          OPENAI_API_ENDPOINT: https://generativelanguage.googleapis.com/v1beta/openai/
           MODEL: gemini-3-flash-preview
           LANGUAGE: Portuguese
           PROMPT: |
