--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -22,8 +22,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.AI_API_KEY }}
           OPENAI_API_ENDPOINT: https://generativelanguage.googleapis.com/v1beta/openai/
-          MODEL: gemini-3-flash-preview
+          MODEL: gemini-1.5-flash
           LANGUAGE: Portuguese
+          top_p: 0.95
+          temperature: 0.7
+          max_tokens: 4096
           PROMPT: |
             Aja como um Engenheiro de Segurança Sênior (DevSecOps). 
             Analise o DIFF deste Pull Request buscando:
